force-app/main/default/objects/Cases__c/Cases__c.object-meta.xml
<CustomObject>
    <label>Cases</label>
    <nameField>
        <displayFormat>C-{000000000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>