force-app/main/default/objects/Cases__c/fields/Accountant_Sign__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Sign__c</fullName>
    <label>Accountant Sign.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>