force-app/main/default/objects/Cases__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <defaultValue>&quot;Managing Director&quot;</defaultValue>
    <label>Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>