force-app/main/default/objects/Cases__c/fields/Authorised_Sign__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Sign__c</fullName>
    <formula>IMAGE(&quot;/resource/CompanyLogo&quot;, &quot;Sign&quot;, 30, 70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorised Sign</label>
    <type>Text</type>
</CustomField>