force-app/main/default/objects/Cases__c/fields/Authorized_Sign_Director_Operations__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Sign_Director_Operations__c</fullName>
    <formula>IMAGE(&quot;/resource/testsign&quot;, &quot;Sign&quot;, 30, 70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Sign. : Director - Operations</label>
    <type>Text</type>
</CustomField>