force-app/main/default/objects/Cases__c/fields/C_C_Acknowledged_by__c.field-meta.xml
<CustomField>
    <fullName>C_C_Acknowledged_by__c</fullName>
    <label>C C Acknowledged by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>