force-app/main/default/objects/Cases__c/fields/Case_Currency__c.field-meta.xml
<CustomField>
    <fullName>Case_Currency__c</fullName>
    <label>Case Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>usd</fullName>
                <label>USD- United State Dollars</label>
            </value>
            <value>
                <fullName>Indian Rupees</fullName>
            </value>
            <value>
                <fullName>Nepalese Rupee</fullName>
            </value>
            <value>
                <fullName>Taka</fullName>
            </value>
            <value>
                <fullName>Kyat</fullName>
            </value>
            <value>
                <fullName>Sri Lanka Rupee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>