force-app/main/default/objects/Cases__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>Case Id</label>
    <type>AutoNumber</type>
</CustomField>