force-app/main/default/objects/Cases__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telephonic enquiries</fullName>
            </value>
            <value>
                <fullName>Field enquiries</fullName>
            </value>
            <value>
                <fullName>Dealers</fullName>
            </value>
            <value>
                <fullName>Mill Operators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>