force-app/main/default/objects/Cases__c/fields/Checked_by_Sign_ASM__c.field-meta.xml
<CustomField>
    <fullName>Checked_by_Sign_ASM__c</fullName>
    <formula>IMAGE(&quot;/resource/testsign&quot;, &quot;Sign&quot;, 30, 70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checked by Sign.(ASM)</label>
    <type>Text</type>
</CustomField>