force-app/main/default/objects/Cases__c/fields/Closed_When_Created__c.field-meta.xml
<CustomField>
    <fullName>Closed_When_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed When Created</label>
    <type>Checkbox</type>
</CustomField>