force-app/main/default/objects/Cases__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>