force-app/main/default/objects/Cases__c/fields/Complaint_Classification__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Classification__c</fullName>
    <label>Complaint Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>