force-app/main/default/objects/Cases__c/fields/Complaint_Details__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Details__c</fullName>
    <label>Complaint Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>