force-app/main/default/objects/Cases__c/fields/Complaint_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Receipt_Date__c</fullName>
    <label>Complaint Receipt Date</label>
    <type>Date</type>
</CustomField>