force-app/main/default/objects/Cases__c/fields/Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax__c</fullName>
    <label>Contact Fax</label>
    <type>Phone</type>
</CustomField>