force-app/main/default/objects/Cases__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <formula>Account_Name__r.Street__c +&quot; &quot;+ Account_Name__r.Village__c +&quot; &quot;+ Account_Name__r.District__c +&quot; &quot;+ Account_Name__r.Area__r.Name +&quot; &quot;+ Account_Name__r.State__c +&quot; &quot;+ Account_Name__r.Country__c +&quot; &quot;+ Account_Name__r.Pincode__c</formula>
    <label>Customer Address</label>
    <type>Text</type>
</CustomField>