force-app/main/default/objects/Cases__c/fields/CustomerName2__c.field-meta.xml
<CustomField>
    <fullName>CustomerName2__c</fullName>
    <label>Customer Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>