force-app/main/default/objects/Cases__c/fields/CustomerNameNew__c.field-meta.xml
<CustomField>
    <fullName>CustomerNameNew__c</fullName>
    <formula>Contact_Name__c</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>