force-app/main/default/objects/Cases__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Root Cause</inlineHelpText>
    <label>(RC)Date</label>
    <type>Date</type>
</CustomField>