force-app/main/default/objects/Cases__c/fields/Date_of_Commissioning__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Commissioning__c</fullName>
    <label>Date of Commissioning</label>
    <type>Date</type>
</CustomField>