force-app/main/default/objects/Cases__c/fields/DateAB__c.field-meta.xml
<CustomField>
    <fullName>DateAB__c</fullName>
    <inlineHelpText>For (Managing Director)</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>