force-app/main/default/objects/Cases__c/fields/Datec__c.field-meta.xml
<CustomField>
    <fullName>Datec__c</fullName>
    <inlineHelpText>Corrective Action</inlineHelpText>
    <label>(CA)Date</label>
    <type>Date</type>
</CustomField>