force-app/main/default/objects/Cases__c/fields/DateDO__c.field-meta.xml
<CustomField>
    <fullName>DateDO__c</fullName>
    <inlineHelpText>For (Director - Operations)</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>