force-app/main/default/objects/Cases__c/fields/DateDp__c.field-meta.xml
<CustomField>
    <fullName>DateDp__c</fullName>
    <inlineHelpText>For (Authorized Sign. : Director - Operations)</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>