force-app/main/default/objects/Cases__c/fields/DateIS__c.field-meta.xml
<CustomField>
    <fullName>DateIS__c</fullName>
    <inlineHelpText>For (Incharge-Service)</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>