force-app/main/default/objects/Cases__c/fields/Datep__c.field-meta.xml
<CustomField>
    <fullName>Datep__c</fullName>
    <inlineHelpText>Preventive Action</inlineHelpText>
    <label>(PA)Date</label>
    <type>Date</type>
</CustomField>