force-app/main/default/objects/Cases__c/fields/DateRB_Time__c.field-meta.xml
<CustomField>
    <fullName>DateRB_Time__c</fullName>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>