force-app/main/default/objects/Cases__c/fields/Debit_Note_No__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note_No__c</fullName>
    <label>Debit Note No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>