force-app/main/default/objects/Cases__c/fields/Designinig_cost__c.field-meta.xml
<CustomField>
    <fullName>Designinig_cost__c</fullName>
    <label>Designinig cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>