force-app/main/default/objects/Cases__c/fields/Details_of_Others__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Others__c</fullName>
    <label>Details of Others</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>