force-app/main/default/objects/Cases__c/fields/Details_of_QC_cost__c.field-meta.xml
<CustomField>
    <fullName>Details_of_QC_cost__c</fullName>
    <label>Details of QC cost</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>