force-app/main/default/objects/Cases__c/fields/Details_of_Rework_Cost__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Rework_Cost__c</fullName>
    <label>Details of Rework Cost</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>