force-app/main/default/objects/Cases__c/fields/EmailNew__c.field-meta.xml
<CustomField>
    <fullName>EmailNew__c</fullName>
    <formula>Account_Name__r.Email__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>