force-app/main/default/objects/Cases__c/fields/Enclosures__c.field-meta.xml
<CustomField>
    <fullName>Enclosures__c</fullName>
    <label>Enclosures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>