force-app/main/default/objects/Cases__c/fields/Engineer_Allotment_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Allotment_Date__c</fullName>
    <label>Engineer Allotment Date</label>
    <type>Date</type>
</CustomField>