force-app/main/default/objects/Cases__c/fields/Engineering_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Request_Number__c</fullName>
    <label>Engineering Request Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>