force-app/main/default/objects/Cases__c/fields/Entitlement_Process_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Process_End_Time__c</fullName>
    <label>Entitlement Process End Time</label>
    <type>DateTime</type>
</CustomField>