force-app/main/default/objects/Cases__c/fields/Initial_DC_No__c.field-meta.xml
<CustomField>
    <fullName>Initial_DC_No__c</fullName>
    <label>Initial DC No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>