force-app/main/default/objects/Cases__c/fields/IS_CAPA_Required__c.field-meta.xml
<CustomField>
    <fullName>IS_CAPA_Required__c</fullName>
    <label>IS CAPA Required ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>