force-app/main/default/objects/Cases__c/fields/Last_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Version_Number__c</fullName>
    <label>Last Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>