force-app/main/default/objects/Cases__c/fields/Machine_MFD__c.field-meta.xml
<CustomField>
    <fullName>Machine_MFD__c</fullName>
    <label>Machine MFD</label>
    <type>Date</type>
</CustomField>