force-app/main/default/objects/Cases__c/fields/Machine_Name__c.field-meta.xml
<CustomField>
    <fullName>Machine_Name__c</fullName>
    <label>Machine Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>