force-app/main/default/objects/Cases__c/fields/Machine_No__c.field-meta.xml
<CustomField>
    <fullName>Machine_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine No.</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipLabel>Cases (Machine No.)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>