force-app/main/default/objects/Cases__c/fields/Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Status__c</fullName>
    <label>Milestone Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>