force-app/main/default/objects/Cases__c/fields/Mill_Name__c.field-meta.xml
<CustomField>
    <fullName>Mill_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mill Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Mill Name)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>