force-app/main/default/objects/Cases__c/fields/ModeofReceipt__c.field-meta.xml
<CustomField>
    <fullName>ModeofReceipt__c</fullName>
    <label>Mode of Receipt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>