force-app/main/default/objects/Cases__c/fields/Name_of3_Participant__c.field-meta.xml
<CustomField>
    <fullName>Name_of3_Participant__c</fullName>
    <label>Name of Participant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>