force-app/main/default/objects/Cases__c/fields/Obsesrvations_status_QC__c.field-meta.xml
<CustomField>
    <fullName>Obsesrvations_status_QC__c</fullName>
    <label>Obsesrvations status(QC)</label>
    <type>TextArea</type>
</CustomField>