force-app/main/default/objects/Cases__c/fields/Order_No_del__c.field-meta.xml
<CustomField>
    <fullName>Order_No_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases_del</relationshipName>
    <type>Lookup</type>
</CustomField>