force-app/main/default/objects/Cases__c/fields/Ordernew__c.field-meta.xml
<CustomField>
    <fullName>Ordernew__c</fullName>
    <label>Order No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>