force-app/main/default/objects/Cases__c/fields/PhoneNumber2__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber2__c</fullName>
    <label>Phone Number 2</label>
    <type>Phone</type>
</CustomField>