force-app/main/default/objects/Cases__c/fields/PhoneNumberNew__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumberNew__c</fullName>
    <formula>Account_Name__r.Mobile__c</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>