force-app/main/default/objects/Cases__c/fields/Prepared_By__c.field-meta.xml
<CustomField>
    <fullName>Prepared_By__c</fullName>
    <defaultValue>&quot;Incharge - Service&quot;</defaultValue>
    <label>Prepared By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>