force-app/main/default/objects/Cases__c/fields/Preventive_Action__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Action__c</fullName>
    <label>Preventive Action</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>