force-app/main/default/objects/Cases__c/fields/Product_new_name__c.field-meta.xml
<CustomField>
    <fullName>Product_new_name__c</fullName>
    <formula>Product__r.Name</formula>
    <label>Product new name</label>
    <type>Text</type>
</CustomField>