force-app/main/default/objects/Cases__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>