force-app/main/default/objects/Cases__c/fields/QC_Sign__c.field-meta.xml
<CustomField>
    <fullName>QC_Sign__c</fullName>
    <label>QC Sign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>