force-app/main/default/objects/Cases__c/fields/Received_by_Sign__c.field-meta.xml
<CustomField>
    <fullName>Received_by_Sign__c</fullName>
    <formula>IMAGE(&quot;/resource/testsign&quot;, &quot;Sign&quot;, 30, 70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received by Sign</label>
    <type>Text</type>
</CustomField>