force-app/main/default/objects/Cases__c/fields/Returnable_DC_No__c.field-meta.xml
<CustomField>
    <fullName>Returnable_DC_No__c</fullName>
    <label>Returnable DC No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>