force-app/main/default/objects/Cases__c/fields/Reviewed_CBy__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_CBy__c</fullName>
    <label>(Corrective Action)Reviewed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>