force-app/main/default/objects/Cases__c/fields/Reviewed_PBy__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_PBy__c</fullName>
    <label>(Preventive Action)Reviewed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>