force-app/main/default/objects/Cases__c/fields/Reviewed_RBy__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_RBy__c</fullName>
    <label>(Root Cause)Reviewed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>