force-app/main/default/objects/Cases__c/fields/Rework_Cost__c.field-meta.xml
<CustomField>
    <fullName>Rework_Cost__c</fullName>
    <label>Rework Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>