force-app/main/default/objects/Cases__c/fields/Service_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Service_Engineer__c</fullName>
    <label>Service Engineer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>