force-app/main/default/objects/Cases__c/fields/Service_Engineer_s_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Service_Engineer_s_Contact_No__c</fullName>
    <label>Service Engineer&apos;s Contact No</label>
    <type>Phone</type>
</CustomField>