force-app/main/default/objects/Cases__c/fields/Signature1__c.field-meta.xml
<CustomField>
    <fullName>Signature1__c</fullName>
    <formula>IMAGE(&quot;/resource/testsign&quot;, &quot;Sign&quot;, 30, 70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature</label>
    <type>Text</type>
</CustomField>