force-app/main/default/objects/Cases__c/fields/SignatureM__c.field-meta.xml
<CustomField>
    <fullName>SignatureM__c</fullName>
    <label>Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>