force-app/main/default/objects/Cases__c/fields/SLA_Violation__c.field-meta.xml
<CustomField>
    <fullName>SLA_Violation__c</fullName>
    <label>SLA Violation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>