force-app/main/default/objects/Cases__c/fields/Spares__c.field-meta.xml
<CustomField>
    <fullName>Spares__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spares</label>
    <referenceTo>spares__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>