force-app/main/default/objects/Cases__c/fields/Stopped__c.field-meta.xml
<CustomField>
    <fullName>Stopped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stopped</label>
    <type>Checkbox</type>
</CustomField>