force-app/main/default/objects/Cases__c/fields/Stores_GRN_No__c.field-meta.xml
<CustomField>
    <fullName>Stores_GRN_No__c</fullName>
    <label>Stores GRN No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>