force-app/main/default/objects/Cases__c/fields/Stores_Signature__c.field-meta.xml
<CustomField>
    <fullName>Stores_Signature__c</fullName>
    <label>Stores Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>