force-app/main/default/objects/Cases__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Transport_Cost__c  +  Rework_Cost__c  +  Spares_cost__c  +  Designinig_cost__c  +  QC_cost__c  +  Others__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>